Fix: 절대경로 수정

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link href="src/output.css" rel="stylesheet" type="text/css" media="all" />
 		<script type="module" src="index.js"></script>
 	</head>
-	<body class="bg-[url('/wall.jpg')] bg-contain bg-repeat-round">
+	<body class="bg-[url('wall.jpg')] bg-contain bg-repeat-round">
 		<main-header></main-header>
 
 		<content class="flex flex-col justify-center items-center min-h-screen">
