--- a/pages/yn-parkws23h.html
+++ b/pages/yn-parkws23h.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>pío, pío Graphic Club | 우성</title>
-		<link href="style.css" rel="stylesheet" type="text/css" media="all" />
-		<link href="src/output.css" rel="stylesheet" type="text/css" media="all" />
+		<link href="../style.css" rel="stylesheet" type="text/css" media="all" />
+		<link href="../src/output.css" rel="stylesheet" type="text/css" media="all" />
 	</head>
 	<script>
 		document.addEventListener('DOMContentLoaded', function () {
@@ -32,15 +32,15 @@
 		<body class="bg-[url('wall.jpg')] bg-contain bg-repeat-round">
 			<header class="top-0 fixed shadow-md">
 				<h1 class="font-extralight text-xl p-4 bg-white w-[92px]">
-					<a href="index.html">pío, pío Graphic Club</a>
+					<a href="../index.html">pío, pío Graphic Club</a>
 				</header>
 			<div id="invitation" class="z-10 fixed  bg-white w-full h-full">
 				<header class="top-0 fixed shadow-md">
 					<h1 class="font-extralight text-xl p-4 bg-white w-[92px]">
-						<a href="index.html">pío, pío Graphic Club</a>
+						<a href="../index.html">pío, pío Graphic Club</a>
 					</header>
 				<content class="min-h-svh flex items-center justify-center">
-					<img src="src/yn-parkws23h/invitation.png" class="animate-pulse xl:w-1/3" />
+					<img src="../src/yn-parkws23h/invitation.png" class="animate-pulse xl:w-1/3" />
 				</content>
 			</div>
 	
@@ -48,7 +48,7 @@
 				id="poster"
 				class="flex flex-col justify-center items-center p-4 min-h-svh"
 			>
-			<img src="src/yn-parkws23h/poster.png" class="z-100 xl:w-1/3 mt-20" />
+			<img src="../src/yn-parkws23h/poster.png" class="z-100 xl:w-1/3 mt-20" />
 				
 				
 				<a href="#text" class="absolute bottom-0">
@@ -114,17 +114,17 @@
 				<ul
 					class="flex flex-col justify-center items-center h-full text-2xl font-extralight space-y-2 text-white"
 				>
-				<li><a href="pages/yn-chamk21h.html">차차</a></li>
-				<li><a href="pages/yn-sohnjy21h.html">군밤</a></li>
-				<li><a href="pages/yn-kimnh21h.html">나현</a></li>
-				<li><a href="pages/yn-parkws23h.html">우성</a></li>
-				<li><a href="pages/yn-parkjy23h.html">서로</a></li>
-				<li><a href="pages/yn-muny19h.html">율</a></li>
-				<li><a href="pages/yn-jeonsb22h.html">수빈</a></li>
-				<li><a href="pages/yn-parksm24h.html">모아</a></li>
-				<li><a href="pages/yn-leeyn23h.html">소요</a></li>
-				<li><a href="pages/yn-kimgh24h.html">과</a></li>
-				<li><a href="pages/yn-hang24d.html">결</a></li>
+				<li><a href="../pages/yn-chamk21h.html">차차</a></li>
+				<li><a href="../pages/yn-sohnjy21h.html">군밤</a></li>
+				<li><a href="../pages/yn-kimnh21h.html">나현</a></li>
+				<li><a href="../pages/yn-parkws23h.html">우성</a></li>
+				<li><a href="../pages/yn-parkjy23h.html">서로</a></li>
+				<li><a href="../pages/yn-muny19h.html">율</a></li>
+				<li><a href="../pages/yn-jeonsb22h.html">수빈</a></li>
+				<li><a href="../pages/yn-parksm24h.html">모아</a></li>
+				<li><a href="../pages/yn-leeyn23h.html">소요</a></li>
+				<li><a href="../pages/yn-kimgh24h.html">과</a></li>
+				<li><a href="../pages/yn-hang24d.html">결</a></li>
 				</ul>
 			</nav>
 			<nav id="menu-button" class="bottom-0 right-0 fixed shadow-lg bg-white">
